tests/machine/x/ocaml/slice.error
File "/workspace/mochi/tests/machine/x/ocaml/slice.ml", line 31, characters 2-15:
31 |   print_endline string_slice "hello" 1 4;
       ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.
